[FIX] web: do not wrap numbers on multiple lines
In languages where the thousands separator is a space, numbers could
be wrapped over multiple lines.

--- a/web/static/src/less/list_view.less
+++ b/web/static/src/less/list_view.less
@@ -102,6 +102,7 @@
 
     .o_list_number {
         text-align: right;
+        white-space: nowrap;
     }
     .o_list_text {
         white-space: pre-wrap;
